[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17.1"
# TODO: Be more specific about what features that need to be implemented
tokio = { version = "1.17.0", features = ["full"] }
futures-util = "0.3.21"
futures-channel = "*"
tungstenite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"