[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.21"
futures-channel = "0.3.21"
tungstenite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = { version = "3.1.2", features = ["derive"] }
