[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"
description = "Websocket Signaling server using words for room names"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.5"

futures-channel = "0.3.21"
futures-util = "0.3.21"

tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
